:bug: Fix: OpenAiAnalysisService 사진 분석 경로 s3로 변경